--- a/styles/main.css
+++ b/styles/main.css
@@ -85,9 +85,9 @@ body {
     box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.3),0 1px 1px rgba(255,255,255,0.2);
 }
 .ice-logo {
-	content:url("../images/stk_logo.png");
+	content:url("../images/stklogo.png");
     margin-top: 7px;
-    width:100px;
+    width:196px;
     height:100px;
 }
 .clear {
