--- a/styles/main.css
+++ b/styles/main.css
@@ -62,7 +62,7 @@ body {
 }
 .info > .info-label {
     color:rgba(255,255,255,0.2);
-    text-shadow: 0 1px 0 rgba(255,255,255,0.2);
+    text-shadow: none;
     float:right;
     margin-right:10px;
     font-size:0.8em;
@@ -123,7 +123,7 @@ body {
 	border: 1px solid #456F9A;
 	color: white;
 	font-weight: bold;
-	text-shadow: 0 1px 1px #3E6790;
+	text-shadow: 0 1px 1px rgba(255,255,255,0.2);
 	background-image: -moz-linear-gradient(top, rgba(41,192,227,1) 0%, rgba(6,123,152,1) 100%); /* FF3.6+ */
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(41,192,227,1)), color-stop(100%,rgba(6,123,152,1))); /* Chrome,Safari4+ */
     background-image: -webkit-linear-gradient(top, rgba(41,192,227,1) 0%,rgba(6,123,152,1) 100%); /* Chrome10+,Safari5.1+ */
@@ -137,12 +137,12 @@ body {
 }
 
 .ui-btn-active {
-	border: 1px solid #2373A5;
-	background: #5393C5;
+	border: 1px solid rgba(255,255,255,0.2);
+	background: rgba(255,255,255,0.2);
 	font-weight: bold;
 	color: white;
 	cursor: pointer;
-	text-shadow: 0 1px 1px #3373A5;
+	text-shadow: 0 1px 1px rgba(255,255,255,0.2);
 	text-decoration: none;
 	background-image: -moz-linear-gradient(top, rgba(6, 123, 152, 1) 0%, rgba(41, 192, 227, 1) 100%); /* FF3.6+ */
 	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(6, 123, 152, 1)), color-stop(100%, rgba(41, 192, 227, 1))); /* Chrome,Safari4+ */
