--- a/styles/main.css
+++ b/styles/main.css
@@ -27,6 +27,10 @@ body {
     text-align: center;    
 }
 
+.ui-overlay-a, .ui-page-theme-a, .ui-panel-wrapper {
+    color:#fff;
+    text-shadow: 0px 1px 0px #fff;
+}
 .err
 {
     color: red;
