--- a/styles/main.css
+++ b/styles/main.css
@@ -258,11 +258,11 @@ body {
 
 .ui-page {
     background: url(../images/bg.jpg) no-repeat center center fixed;
-    background-size: cover; /*Css padrão*/
-    -webkit-background-size: cover; /*Css safari e chrome*/
-    -moz-background-size: cover; /*Css firefox*/
-    -ms-background-size: cover; /*Css IE não use mer#^@%#*/
-    -o-background-size: cover; /*Css Opera*/
+    background-size: contain; /*Css padrão*/
+    -webkit-background-size: contain; /*Css safari e chrome*/
+    -moz-background-size: contain; /*Css firefox*/
+    -ms-background-size: contain; /*Css IE não use mer#^@%#*/
+    -o-background-size: contain; /*Css Opera*/
 }
 
 .ui-content {
