--- a/styles/main.css
+++ b/styles/main.css
@@ -16,15 +16,18 @@ body {
 }
 
 .navigation-icons {
-    width: 270px;
     margin-left: auto;
     margin-right: auto;
+    width:35%;
+    height:35%;
 }
 
 .logo-splash {
     float: right;
     alignment-adjust: middle;
     opacity: 0.95;
+    width:35%;
+    height:35%;
 }
 
 .cadastro-nav {
