--- a/styles/main.css
+++ b/styles/main.css
@@ -16,18 +16,15 @@ body {
 }
 
 .navigation-icons {
+    width: 270px;
     margin-left: auto;
     margin-right: auto;
-    width:35%;
-    height:35%;
 }
 
 .logo-splash {
     float: right;
     alignment-adjust: middle;
     opacity: 0.95;
-    width:35%;
-    height:35%;
 }
 
 .cadastro-nav {
@@ -261,11 +258,11 @@ body {
 
 .ui-page {
     background: url(../images/bg.jpg) no-repeat center center fixed;
-    background-size: contain; /*Css padrão*/
-    -webkit-background-size: contain; /*Css safari e chrome*/
-    -moz-background-size: contain; /*Css firefox*/
-    -ms-background-size: contain; /*Css IE não use mer#^@%#*/
-    -o-background-size: contain; /*Css Opera*/
+    background-size: cover; /*Css padrão*/
+    -webkit-background-size: cover; /*Css safari e chrome*/
+    -moz-background-size: cover; /*Css firefox*/
+    -ms-background-size: cover; /*Css IE não use mer#^@%#*/
+    -o-background-size: cover; /*Css Opera*/
 }
 
 .ui-content {
