--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@ body {
 }
 
 .navigation-icons {
-    width: 270px;
+    /*width: 270px;*/
     margin-left: auto;
     margin-right: auto;
 }
@@ -68,7 +68,6 @@ body {
     background-repeat: no-repeat;
     background-size: 36px 36px;
 }
-
 
 .nav-icon {
     float: left;
@@ -160,42 +159,42 @@ body {
     padding-top: 17px;
 }
 
-    .header-text strong {
-        letter-spacing: normal;
-        font-family: 'Lato', sans-serif;
-        font-size: 18px;
-        color: #3b4043;
-        font-weight: 600;
-        display: block;
-        text-align: right;
-        padding-right: 20px;
-    }
+.header-text strong {
+    letter-spacing: normal;
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    color: #3b4043;
+    font-weight: 600;
+    display: block;
+    text-align: right;
+    padding-right: 20px;
+}
 
-    .header-text em {
-        font-family: 'Dosis', sans-serif;
-        font-size: 13px;
-        letter-spacing: 0.8px;
-        font-style: normal;
-        color: #3b4043;
-        display: block;
-        padding-right: 20px;
-    }
+.header-text em {
+    font-family: 'Dosis', sans-serif;
+    font-size: 13px;
+    letter-spacing: 0.8px;
+    font-style: normal;
+    color: #3b4043;
+    display: block;
+    padding-right: 20px;
+}
 
 .heading {
     margin-bottom: 20px;
 }
 
-    .heading em {
-        font-family: 'Dosis', sans-serif;
-        font-style: normal;
-        font-size: 12px;
-        color: #ce1a13;
-    }
+.heading em {
+    font-family: 'Dosis', sans-serif;
+    font-style: normal;
+    font-size: 12px;
+    color: #ce1a13;
+}
 
-    .heading h3 {
-        color: #252525;
-        font-weight: 200;
-    }
+.heading h3 {
+    color: #252525;
+    font-weight: 200;
+}
 
 .heading-left {
     float: left;
@@ -211,7 +210,6 @@ body {
     margin-left: -5%;
 }
 
-
 .thumb {
     width: 50%;
     box-sizing: border-box;
@@ -221,11 +219,10 @@ body {
     margin-bottom: 10px;
 }
 
-    .thumb img {
-        width: 100%;
-        display: block;
-    }
-
+.thumb img {
+    width: 100%;
+    display: block;
+}
 
 .left-thumb-text {
     color: #FFFFFF;
@@ -298,69 +295,6 @@ body {
 
 .err {
     color: red;
-}
-
-.info-wrapper {
-    background: rgb(6, 123, 152); /* Old browsers */
-    background: -moz-linear-gradient(top, rgb(14, 79, 146) 0%, rgba(14, 79, 146, 1) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(14, 79, 146, 1)), color-stop(100%, rgb(103, 147, 193))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, rgba(14, 79, 146, 1) 0%, rgba(103, 147, 193, 1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, rgba(14, 79, 146, 1) 0%, rgba(103, 147, 193, 1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, rgba(14, 79, 146, 1) 0%, rgba(103, 147, 193, 1) 100%); /* IE10+ */
-    background: linear-gradient(to bottom, rgba(14, 79, 146, 1) 0%, rgba(103, 147, 193, 1) 100%); /* W3C */
-    padding: 0.5em;
-    border: none;
-    -moz-box-shadow: inset 0px 1px 6px 0px rgba(0,0,0,0.5),0 1px 1px rgba(255,255,255,1);
-    -webkit-box-shadow: inset 0px 1px 6px 0px rgba(0, 0, 0, 0.5),0 1px 1px rgba(255,255,255,1);
-    box-shadow: inset 0px 1px 6px 0px rgba(0, 0, 0, 0.5),0 1px 1px rgba(255,255,255,1);
-}
-
-.info-wrapper-left {
-    float: left;
-    width: 25%;
-}
-
-.info-wrapper-right {
-    float: right;
-    width: 75%;
-}
-
-.info {
-    margin: 0.6em 0em;
-    position: relative;
-    right: 0;
-}
-
-    .info > .info-label {
-        color: rgba(255,255,255,0.2);
-        text-shadow: none;
-        float: right;
-        margin-right: 10px;
-        font-size: 0.8em;
-        vertical-align: middle;
-        padding: 0.4em 0em;
-    }
-
-    .info > .info-data {
-        color: #fff;
-        text-shadow: none;
-        padding: 0.4em 1em;
-        background: rgba(255,255,255,0.2);
-        border-radius: 1em;
-        width: 45%;
-        display: inline;
-        float: right;
-        font-size: 0.8em;
-        -moz-box-shadow: inset 0px 1px 0px 0px rgba(0,0,0,0.3),0 1px 1px rgba(255,255,255,0.2);
-        -webkit-box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.3),0 1px 1px rgba(255,255,255,0.2);
-        box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.3),0 1px 1px rgba(255,255,255,0.2);
-    }
-
-.ice-logo {
-    content: url("../images/stklogo.png");
-    margin-top: 7px;
-    width: 100px;
-    height: 51px;
 }
 
 .clear {
