--- a/styles/main.css
+++ b/styles/main.css
@@ -253,7 +253,7 @@ body {
 }
 
 .ui-page {
-    background: url(../images/bg.jpg) no-repeat center center fixed;
+    background: url(../images/320x480px.png) no-repeat center center fixed;
     background-size: cover; /*Css padrão*/
     -webkit-background-size: cover; /*Css safari e chrome*/
     -moz-background-size: cover; /*Css firefox*/
