--- a/styles/tablet-1024-ldpi.css
+++ b/styles/tablet-1024-ldpi.css
@@ -1,4 +1,8 @@
-.ice-logo {
-   content:url("../images/stklogo@x2.png");
-   background-size:100%;
+.ui-page {
+    background: url(../images/768x1024px.png) no-repeat center center fixed;
+    background-size: cover; /*Css padrão*/
+    -webkit-background-size: cover; /*Css safari e chrome*/
+    -moz-background-size: cover; /*Css firefox*/
+    -ms-background-size: cover; /*Css IE não use mer#^@%#*/
+    -o-background-size: cover; /*Css Opera*/
 }
